--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -1,13 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
+    
     display: flex;
     justify-content: center;
     align-items: flex-end;
     min-height: 100vh; /* ทำให้ body มีความสูงอย่างน้อย 100% ของ viewport */
     overflow: hidden; /* ไม่ให้มีการสกอเม้า */
-}
-.main{
-    // width: 100%;
-    // height: 100vh;
 }
 video{
 }
