--- a/Client/src/components/catagory/catagory.scss
+++ b/Client/src/components/catagory/catagory.scss
@@ -1,18 +1,82 @@
-.card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; // Set the height of the container to 100% of the viewport height
-    margin: 0; // Remove default margin
-  }
+/* catagory.scss */
+.Category-Modal {
+  position: relative;
+  top: 50%;
+}
+.category-modal-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.438); /* Use rgba with the desired opacity (0.9 in this example) */
+  border: 0 solid #000000;
+  border-radius: 5px;
+  backdrop-filter: blur(5px);
+}
 
-.border{
-    border: 1px solid;
-    border-bottom-left-radius: 20px;
-    background-color: #BB98FF;
-    box-shadow: 0 100px 100px rgba(59, 59, 59, 0.1); 
+.category-modal-title {
+  border: 1px solid;
+  border-bottom-left-radius: 20px;
+  background-color: plum;
+  height: 40px;
+}
+.category-modal-title-second {
+}
+.Carousel {
+  width: 100%;
+  height: 2px;
+}
+.Slider {
+  width: 80%;
+  position: relative;
+  left: auto;
+}
+/* catagory.scss */
+
+.custom-slick-next{
+  position: absolute;
+  left: 100%;
+  top: 20%;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #bb98ff; /* Set the background color for the arrows */
+  color: #ffffff; /* Set the text color for the arrows */
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  transition: background-color 0.3s ease; /* Add a smooth transition for the background color */
+}
+.custom-slick-prev{
+  position: absolute;
+  font-size: 16px;
+  top: 20%;
+  right: 100%;
+  cursor: pointer;
+  background-color: #bb98ff; /* Set the background color for the arrows */
+  color: #ffffff; /* Set the text color for the arrows */
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  transition: background-color 0.3s ease; /* Add a smooth transition for the background color */
+}
+
+.custom-slick-next:hover,
+.custom-slick-prev:hover {
+  background-color: #9377b9; /* Set the background color for the arrows on hover */
+}
+
+.image-slide{
+  width: 70%;
+}
+.image-slider-second{
+  width: 80%;
+  height: 100px;
+}
+.button-close{
+  position: relative;
+  left: 90%;
+  top: 1vh;
+  z-index: 1000;
+  cursor: pointer;
 }
