--- a/Client/src/layout/header/styles.scss
+++ b/Client/src/layout/header/styles.scss
@@ -13,10 +13,11 @@
         display: flex;
         flex: 1;
         justify-content: flex-end;
-        margin: 0 5px;
+        margin: 0 50px;
     }
 
 }
 .fullscreen-btn{
     color: #fff;
+    cursor: pointer;
 }
