--- a/Client/src/components/catagory/catagory.scss
+++ b/Client/src/components/catagory/catagory.scss
@@ -1,70 +1,131 @@
 /* catagory.scss */
 .Category-Modal {
-  position: relative;
-  top: 50%;
+
+ 
+
 }
 .category-modal-container {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 30%;
   transform: translate(-50%, -50%);
-  width: 300px;
-  background-color: rgba(255, 255, 255, 0.438); /* Use rgba with the desired opacity (0.9 in this example) */
+  width: 415px;
+  height: 450px;
+  background: transparent;
   border: 0 solid #000000;
   border-radius: 5px;
   backdrop-filter: blur(5px);
+  border: 2px solid rgba(100, 98, 98, 0.2);
+
 }
 
 .category-modal-title {
-  border: 1px solid;
-  border-bottom-left-radius: 20px;
-  background-color: plum;
-  height: 40px;
+
+  border-radius: 0px 0px 10px 25px;
+  background: #BB98FF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 1px solid rgba(100, 98, 98, 0.2);   //border
+  position: relative;
+  align-items: center;
+  min-height: fit-content;
+  display: flex;
+  justify-content: space-between;
+
 }
-.category-modal-title-second {
+.category-title{
+    max-width: fit-content;
+    padding: 10px;
+    span{
+      color: #FFF;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      font-family: Inter;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      margin-left: 20px;
+    }
 }
+
+.category-modal-title-second{
+  border-bottom: 1px solid #BB98FF;
+  border-radius: 50px;
+  max-width: fit-content;
+  margin: 5px;
+  span{
+    padding: 5px;
+    margin-right: 15px;
+  }
+}
+
 .Carousel {
   width: 100%;
   height: 2px;
 }
 .Slider {
-  width: 80%;
+  width: 83%;
   position: relative;
   left: auto;
+  margin: 5px;
 }
 /* catagory.scss */
 
 .custom-slick-next{
   position: absolute;
-  left: 100%;
-  top: 20%;
-  font-size: 16px;
+  width: 40px;
+  height: 40px;
+  left: 90%;
+  top: 30%;
   cursor: pointer;
-  background-color: #bb98ff; /* Set the background color for the arrows */
-  color: #ffffff; /* Set the text color for the arrows */
-  border: none;
-  border-radius: 4px;
+  background-color: #bb98ff;
+  color: #ffffff;
+  box-shadow: 0px -2px 4.1px 0px rgba(255, 255, 255, 0.25) inset;
+  border-radius: 50px;
   outline: none;
-  transition: background-color 0.3s ease; /* Add a smooth transition for the background color */
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background-color: #ad78f8;
+    box-shadow: 0px -2px 4.1px 0px rgba(0, 0, 0, 0.25) inset;
+    
+  }
+  .nextarrow{
+    margin-top: 5px;
+    width: 50%; 
+    height: auto; 
+  }
 }
 .custom-slick-prev{
+  z-index: 1;
   position: absolute;
-  font-size: 16px;
-  top: 20%;
-  right: 100%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  top: 30%;
+  right: 95%;
   cursor: pointer;
-  background-color: #bb98ff; /* Set the background color for the arrows */
-  color: #ffffff; /* Set the text color for the arrows */
-  border: none;
-  border-radius: 4px;
+  background-color: #bb98ff;
+  color: #ffffff;
+  box-shadow: 0px -2px 4.1px 0px rgba(255, 255, 255, 0.25) inset;
+  border-radius: 50px;
   outline: none;
-  transition: background-color 0.3s ease; /* Add a smooth transition for the background color */
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background-color: #ad78f8;
+    box-shadow: 0px -2px 4.1px 0px rgba(0, 0, 0, 0.25) inset;
+    
+  }
+  .prevarrow{
+    margin-top: 5px;
+    width: 60%; 
+    height: auto; 
+  }
 }
 
-.custom-slick-next:hover,
-.custom-slick-prev:hover {
-  background-color: #9377b9; /* Set the background color for the arrows on hover */
-}
 
 .image-slide{
   width: 70%;
@@ -74,9 +135,54 @@
   height: 100px;
 }
 .button-close{
-  position: relative;
-  left: 90%;
-  top: 1vh;
-  z-index: 1000;
   cursor: pointer;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 95px;
+  height: 100px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #FFF;
+  &:hover{
+    background: rgba(255, 255, 255, 0.9); /* ตั้งค่าสีพื้นหลังที่สว่างขึ้นเล็กน้อย */
+    transition: background 0.3s ease; /* เพิ่ม transition เพื่อให้การเปลี่ยนแปลงเป็นไปอย่างนุ่มนวล */
+  }
+
+  .cards-image {
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    .image-slide {
+      // Add styles for the image
+      max-width: 100%;
+      max-height: 100%;
+
+    }
+  }
+
+  .cardtext {
+    padding: 5px;
+    color: #000000;
+    text-decoration: none;
+  }
+}
+
+
+.card-image{
+  width: 160px;
+  height: 155px;
+  flex-shrink: 0;
+  background: #fff;
+  border-radius: 10px;
+  margin-right: 10px;
+  
+}
+
