--- a/Client/src/layout/catagory/catagory.scss
+++ b/Client/src/layout/catagory/catagory.scss
@@ -1,8 +1,5 @@
 /* catagory.scss */
 .Category-Modal {
-
- 
-
 }
 .category-modal-container {
   position: absolute;
@@ -16,42 +13,39 @@
   border-radius: 5px;
   backdrop-filter: blur(5px);
   border: 2px solid rgba(100, 98, 98, 0.2);
-
 }
 
 .category-modal-title {
-
   border-radius: 0px 0px 10px 25px;
-  background: #BB98FF;
+  background: #bb98ff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  border: 1px solid rgba(100, 98, 98, 0.2);   //border
+  border: 1px solid rgba(100, 98, 98, 0.2); //border
   position: relative;
   align-items: center;
   min-height: fit-content;
   display: flex;
   justify-content: space-between;
-
 }
-.category-title{
-    max-width: fit-content;
-    padding: 10px;
-    span{
-      color: #FFF;
-      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      margin-left: 20px;
-    }
+.category-title {
+  max-width: fit-content;
+  padding: 10px;
+  span {
+    color: #fff;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-left: 20px;
+  }
 }
 
-.category-modal-title-second{
-  border-bottom: 1px solid #BB98FF;
+.category-modal-title-second {
+  border-bottom: 1px solid #bb98ff;
   border-radius: 50px;
   max-width: fit-content;
   margin: 5px;
-  span{
+  span {
     padding: 5px;
     margin-right: 15px;
   }
@@ -69,7 +63,7 @@
 }
 /* catagory.scss */
 
-.custom-slick-next{
+.custom-slick-next {
   position: absolute;
   width: 40px;
   height: 40px;
@@ -85,18 +79,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  &:hover{
+  &:hover {
     background-color: #ad78f8;
     box-shadow: 0px -2px 4.1px 0px rgba(0, 0, 0, 0.25) inset;
-    
   }
-  .nextarrow{
+  .nextarrow {
     margin-top: 5px;
-    width: 50%; 
-    height: auto; 
+    width: 50%;
+    height: auto;
   }
 }
-.custom-slick-prev{
+.custom-slick-prev {
   z-index: 1;
   position: absolute;
   width: 40px;
@@ -114,27 +107,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  &:hover{
+  &:hover {
     background-color: #ad78f8;
     box-shadow: 0px -2px 4.1px 0px rgba(0, 0, 0, 0.25) inset;
-    
   }
-  .prevarrow{
+  .prevarrow {
     margin-top: 5px;
-    width: 60%; 
-    height: auto; 
+    width: 60%;
+    height: auto;
   }
 }
 
-
-.image-slide{
+.image-slide {
   width: 70%;
 }
-.image-slider-second{
+.image-slider-second {
   width: 80%;
   height: 100px;
 }
-.button-close{
+.button-close {
   cursor: pointer;
 }
 
@@ -147,9 +138,14 @@
   height: 100px;
   flex-shrink: 0;
   border-radius: 10px;
-  background: #FFF;
-  &:hover{
-    background: rgba(255, 255, 255, 0.9); /* ตั้งค่าสีพื้นหลังที่สว่างขึ้นเล็กน้อย */
+  background: #fff;
+  &:hover {
+    background: rgba(
+      255,
+      255,
+      255,
+      0.9
+    ); /* ตั้งค่าสีพื้นหลังที่สว่างขึ้นเล็กน้อย */
     transition: background 0.3s ease; /* เพิ่ม transition เพื่อให้การเปลี่ยนแปลงเป็นไปอย่างนุ่มนวล */
   }
 
@@ -159,12 +155,10 @@
     justify-content: center;
     align-items: center;
 
-
     .image-slide {
       // Add styles for the image
       max-width: 100%;
       max-height: 100%;
-
     }
   }
 
@@ -175,14 +169,19 @@
   }
 }
 
-
-.card-image{
+.card-image {
   width: 160px;
   height: 155px;
   flex-shrink: 0;
   background: #fff;
   border-radius: 10px;
   margin-right: 10px;
-  
 }
 
+.img-icon-category {
+  max-width: fit-content;
+  background: none;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
