--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -1,10 +1,11 @@
 body {
     overflow-y: hidden;
     overflow-x: hidden;
-    background: url('https://admin.adaddictth.com/files/20230412_LofiGirl_4.jpg') no-repeat center center fixed;
+    // background: url('https://admin.adaddictth.com/files/20230412_LofiGirl_4.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
+    user-select: none;
 
   }
   
@@ -13,6 +14,8 @@ body {
   html {
     background-color: black;
     box-sizing: border-box;
+    height: max-content;
+
   }
   
   div,
