--- a/Client/src/layout/sideBar/styles.scss
+++ b/Client/src/layout/sideBar/styles.scss
@@ -1,15 +1,31 @@
 
 
-
 .sidebar {
-    min-height: 100vh;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    z-index: 2;
+
     .barIcon {
-        img{
+        transition: transform 0.3s ease;
+
+        img {
             width: 50px;
-            transform: rotate(270deg); /* หมุนรูปภาพ 180 องศา */
+            transform: rotate(180deg);
             margin-left: 10px;
-            &:hover{
+
+            &:hover {
                 width: 52px;
+            }
+        }
+    }
+
+    &.open {
+        .barIcon {
+            img {
+                transform: rotate(0deg);
             }
         }
     }
