--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -1,14 +1,23 @@
 /* Home.scss */
 
 .main {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; /* 100% of the viewport height */
-  }
-  
-  .audioplayer {
-    flex-grow: 1; /* Expand and fill the available space */
-  }
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* 100% of the viewport height */
+}
+
+.audioplayer {
+  flex-grow: 1; /* Expand and fill the available space */
+
+video {
+  width: 100%;
+  height: 100%;
+  top: 90%;
+  display: flex;
+  justify-content: center;
+}
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
+}
   
   video {
     width: 100%;
