--- a/Client/src/layout/catagory/catagory.scss
+++ b/Client/src/layout/catagory/catagory.scss
@@ -25,6 +25,7 @@
   min-height: fit-content;
   display: flex;
   justify-content: space-between;
+  cursor: move;
 }
 .category-title {
   max-width: fit-content;
