--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -11,9 +11,11 @@
     justify-content: end;
     align-items: flex-end;
     min-height: 100%;
+    z-index: 1;
     p{
       margin-bottom: 60px;
-      margin-right: 50px;
+      margin-right: 60px;
+      font-size: 1.5rem;
     }
   }
 }
@@ -24,7 +26,6 @@
 video {
   width: 100%;
   height: 100%;
-  top: 90%;
   display: flex;
   justify-content: center;
 }
@@ -37,4 +38,11 @@ video {
     object-fit: cover; /* Maintain aspect ratio and cover the container */
   }
 
+  .videofirst{
+    position: absolute;
+  }
+  
+  .videosecond{
+    position: absolute;
+  }
   
