--- a/Client/src/components/audioplayer/player.scss
+++ b/Client/src/components/audioplayer/player.scss
@@ -1,7 +1,7 @@
 .audio-main {
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   display: flex;
   justify-content: center;
   height: 100%;
@@ -41,81 +41,26 @@
   flex-direction: row;
 }
 
-.btn-play {
-  background: none;
-  border: none;
-  cursor: pointer;
-  overflow: hidden;
-}
+// .btn-play {
+//   background: none;
+//   border: none;
+//   cursor: pointer;
+//   overflow: hidden;
+// }
 
-.btn-skrip {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
+// .btn-skrip {
+//   background: none;
+//   border: none;
+//   cursor: pointer;
+// }
 
-.icon {
-  font-size: 30px; /* ปรับขนาดไอคอนตามต้องการ */
-  color: #fff; /* สีของไอคอน */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.custom-volume {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-right: 20px;
-}
-
-.custom-range {
-  -webkit-appearance: none;
-  width: 60%;
-  background: red;
-  border-radius: 5px;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-
-  &:hover {
-    opacity: 1;
-  }
-
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 15px;
-    height: 15px;
-    background: #fff;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    margin-top: -6px;
-  }
-
-  &::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    background: #3498db;
-    border-radius: 50%;
-    border: 2px solid red;
-    cursor: pointer;
-  }
-
-  &::-webkit-slider-runnable-track {
-    height: 5px;
-    background: #bb98ff; /* สีของ track */
-    border-radius: 5px;
-  }
-
-  &::-moz-range-track {
-    width: 100%;
-    height: 10px;
-    background: red; /* สีของ track */
-    border-radius: 5px;
-  }
-}
+// .icon {
+//   font-size: 30px; /* ปรับขนาดไอคอนตามต้องการ */
+//   color: #fff; /* สีของไอคอน */
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .namemusic {
   color: #fff;
@@ -128,10 +73,54 @@
   border-left: 2px solid rgba(255, 255, 255, 1);
   border-radius: 50px;
 }
-@media (max-width: 768px) {
-  .borderBG-audio {
-    width: 100%;
-    
+@media screen and (max-width: 1024px) {
+  .borderBG-audio{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    background: transparent;
+    backdrop-filter: blur(5px);
+    border: 0.5px solid rgba(255, 255, 255, 0.2);
+   margin-bottom: 60px;
+
+    .btn-play {
+      cursor: pointer;
+      overflow: hidden;
+      
+    }
+    .namemusic{
+      display: none;
+    }
+
+    .time {
+      color: #fff;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      font-family: Inter;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin: 20px 20px; /* 20px ทั้งทางซ้ายและขวา */
+    }
+
+    .line {
+      display: none;
+      height: 45px;
+      border-left: 2px solid rgba(255, 255, 255, 1);
+      border-radius: 50px;
+    }
+
+    .costom-volume{
+        position: relative;
+      .slide-volume{
+        position: absolute;
+        z-index: 5;
+        right: -40px;
+        top: -45px;
+      }
+    }
+
   }
+
 }
 
