--- a/Client/src/layout/header/styles.scss
+++ b/Client/src/layout/header/styles.scss
@@ -13,10 +13,15 @@
         flex: 1;
         justify-content: flex-end;
         margin: 0 20px;
+        .fullscreen-btn{
+            color: #fff;
+            cursor: pointer;
+            @media screen and (max-width: 1024px) {
+                display: none;
+              }
+        
+        }
+
     }
 
-}
-.fullscreen-btn{
-    color: #fff;
-    cursor: pointer;
 }
