--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -1,6 +1,6 @@
 body {
-    // overflow-y: hidden;
-    // overflow-x: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
     // background: url('https://admin.adaddictth.com/files/20230412_LofiGirl_4.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
