--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -35,30 +35,23 @@
   z-index: 2;
 }
 
-.video-container {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
+video {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
   video {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center top;
+    object-fit: cover; /* Maintain aspect ratio and cover the container */
+  }
+
+  .videofirst{
     position: absolute;
   }
-  @media screen and (max-width: 1024px) {
-    .video-container {
-      overflow: scroll;
-      video {
-        min-height: 100vh !important;
-        min-width: 100vw !important;
-        position: absolute !important;
-        top: 50% !important;
-        transform: translate(-50%, -50%) !important;
-        width: 177.77778vh !important;
-      }
-    }
+  
+  .videosecond{
+    position: absolute;
   }
-}
-
