--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -14,7 +14,7 @@ body {
   html {
     background-color: black;
     box-sizing: border-box;
-    height: max-content;
+    // height: 100%;
 
   }
   
