update-a-to-span

--- a/Client/src/layout/sideBar/styles.scss
+++ b/Client/src/layout/sideBar/styles.scss
@@ -42,7 +42,7 @@
             li {
                   width: 30px; 
                   margin: 10px;
-                a {
+                span {
                     img {
                         max-width: 100%; 
                     }
