--- a/Client/src/components/atmosphereIcons/style.scss
+++ b/Client/src/components/atmosphereIcons/style.scss
@@ -1,22 +1,44 @@
+.side-volume {
+    width: 150px;
+    height: 100px;
+    display: inline-block;
+    position: relative;
 
-.button-rain{
 
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        border: 2px solid #fff;
-        position: relative; /* เพิ่มบรรทัดนี้ */
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        img{
-            width: 50%;
-            height: 50%;
-            padding: 10px ;
-        }
-        &:hover{
-            background: #BB98FF;
-        }
+  .button-rain {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    position: relative; /* เพิ่มบรรทัดนี้ */
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 30%;
+    
+    img {
+      width: 50%;
+      height: 50%;
+      padding: 10px;
+    }
+    &:hover {
+      background: #bb98ff;
+      + .slide {
+        display: block;
+      }
+    }
+  }
+  .slide{
+    margin-top: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    display: none;
+  }
+
+  .display-block {
+    display: block;
+  }
 }
