--- a/Client/src/components/atmospheresrtting/styles.scss
+++ b/Client/src/components/atmospheresrtting/styles.scss
@@ -1,15 +1,18 @@
 
 .bg-atmos {
-  width: 330px;
+  width: 340px;
   height: 450px;
   flex-shrink: 0;
   border-radius: 10px;
   background: rgba(227, 242, 253, 0.9);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
   position: fixed;
+  left: 100px;
+  display: none;
 
+  
   .header-atmos {
-    width: 330px;
+    width: 340px;
     height: 40px;
     border-radius: 10px 10px 10px 50px;
     background: #bb98ff;
@@ -17,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
     span {
       margin-left: 20px;
     }
@@ -25,6 +29,16 @@
     }
   }
 
+  .scoll-mouns {
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 380px;
+  
+    /* ซ่อน scrollbar ด้านข้าง */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
   .city-atmos {
     // border: 1px solid yellow;
     margin-top: 40px;
@@ -42,8 +56,9 @@
     .content-city{
       display: flex;
       align-items: center;
-      h1{
-        margin: 0px 10px 0px 10px;
+      justify-content: center;
+      h4{
+        margin: 0px 5px 0px 0px;
         font-size: 1.5rem;
         color: #808080;
       }
@@ -53,7 +68,7 @@
   .nature-atmos {
     margin-top: 20px;
 
-    h1 {
+    p {
         color: #9747ff;
         text-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25);
         font-family: Inter;
@@ -68,8 +83,9 @@
       .content-city{
         display: flex;
         align-items: center;
-        h1{
-          margin: 0px 10px 0px 10px;
+        justify-content: center;
+        h4{
+          margin: 0px 5px 0px 0px;
           font-size: 1.5rem;
           color: #808080;
         }
@@ -81,4 +97,21 @@
     border: 1px solid red;
     width: 100px;
   
+}
+
+.btn-atmosphere{
+  button{
+    border: none;
+    background: none;
+    width: 30px; 
+    padding: 0;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.display-block {
+  display: block;
 }
