--- a/Client/src/components/atmospheresrtting/styles.scss
+++ b/Client/src/components/atmospheresrtting/styles.scss
@@ -103,6 +103,7 @@
     background: none;
     width: 30px; 
     padding: 0;
+    cursor: pointer;
     img{
       width: 100%;
       height: 100%;
