--- a/Client/src/components/atmosphereIcons/style.scss
+++ b/Client/src/components/atmosphereIcons/style.scss
@@ -31,11 +31,18 @@
     }
   }
   .slide{
-    margin-top: 10px;
+    margin-top: 50px;
     position: absolute;
     bottom: 0;
     left: 10%;
     display: none;
+    height: 60px;
+    .rage-volume{
+      display: block;
+      bottom: -25px;
+    }
+    &:hover {display: block;}
+    bottom: 5px;
   }
 
   .display-block {
