--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -2,7 +2,9 @@
 
 .main {
   overflow-y: hidden;
+  overflow-x: hidden;
   object-fit: cover;
+  
   .modeName {
   position: fixed;
   bottom: -1%;
@@ -76,4 +78,12 @@
   transition-duration: 0.5s;
   transition-delay: 0s;
   transition-property: opacity;
+}
+
+@media screen and (max-width: 1024px) {
+ .main{
+  overflow-y: hidden;
+  object-fit: cover;
+  overflow-x: scroll;
+ }
 }
