--- a/Client/src/components/atmosphereIcons/style.scss
+++ b/Client/src/components/atmosphereIcons/style.scss
@@ -4,6 +4,7 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
+    z-index: 50;
 
 
   .button-rain {
@@ -11,7 +12,6 @@
     width: 50px;
     height: 50px;
     border: 2px solid #fff;
-    position: relative; /* เพิ่มบรรทัดนี้ */
     overflow: hidden;
     display: flex;
     justify-content: center;
