--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -12,7 +12,7 @@ body {
   :root,
   body,
   html {
-    background-color: black;
+    // background-color: black;
     box-sizing: border-box;
     // height: 100%;
 
