--- a/Client/src/components/profile/styles.scss
+++ b/Client/src/components/profile/styles.scss
@@ -156,3 +156,13 @@
     }
   }
 }
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for transparency */
+  z-index: 100;
+}
