make-style-profile

--- a/Client/src/components/profile/styles.scss
+++ b/Client/src/components/profile/styles.scss
@@ -2,6 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  .modalBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    z-index: 999;
+  }
 }
 
 .modalOverlay {
@@ -39,7 +48,6 @@
 }
 
 .logoutButton {
-  
   button {
     top: 93%;
     color: #bb98ff;
@@ -55,7 +63,6 @@
     border-radius: 10px;
     background: #3d3d3d;
     position: absolute;
-    
   }
 }
 
@@ -68,37 +75,92 @@
   pointer-events: none;
 }
 .myInfo {
-  border: 1px solid #bb98ff;
+  height: 55px;
+  border: 2px solid #bb98ff;
   // margin-top: 6%;
   // margin: 10px;
   padding: 5%;
+  border-radius: 20px;
+  position: relative;
+  .myinfo-head {
+    position: absolute;
+    top: -20px;
+    // border: 1px solid red;
+    background-color: #e3f2fd;
+    h1 {
+      padding: 5px;
+    }
+  }
+  .myinfo-content {
+    position: absolute;
+    width: 320px;
+    left: 10%;
+    // top: 50%;
+    // transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    span {
+      color: rgba(61, 61, 61, 1);
+      display: flex;
+      justify-content: space-between;
+      p {
+        width: 50%;
+      }
+    }
+  }
 }
 
 .changepassword {
-  border: 1px solid #bb98ff;
-  margin-top: 3%;
+  border: 2px solid #bb98ff;
+  border-radius: 20px;
+  margin-top: 5%;
   // margin: 10px;
   padding: 5%;
+  position: relative;
+  .head-changepassword {
+    position: absolute;
+    top: -15px;
+    background-color: #e3f2fd;
+    max-width: fit-content;
+    h1 {
+      padding: 3px;
+    }
+  }
 }
 
 .managemember {
-  border: 1px solid #bb98ff;
+  border: 2px solid #bb98ff;
+  border-radius: 10px;
+  position: relative;
   margin-top: 3%;
   // margin: 10px;
   padding: 5%;
+  .head-managemenber{
+    max-width: fit-content;
+    position: absolute;
+    background-color: #e3f2fd;
+    top: -20%;
+    h1{
+      padding: 0px 5px 0px 5px;
+
+    }
+  }
 }
 
 .buttonChangePasswod {
 }
 
 .content {
-  background-color: #f5fbff ;
-  margin-top: 5%;
+  // background-color: #f5fbff;
+  margin-top: 3%;
   // padding-top: 0;
   padding: 5%;
   max-height: 350px; /* Set a maximum height for the content */
   overflow-y: auto;
   border-radius: 20px;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   p {
     color: #3d3d3d;
   }
@@ -117,25 +179,40 @@
 
 .changepassword {
   // Your existing styles for the changepassword section
+  position: relative;
 
   .form-group {
     margin-bottom: 16px;
+    display: flex;
+    align-items: center;
 
     label {
       display: block;
-      margin-bottom: 8px;
     }
 
     input {
-      width: 100%;
+      width: 50%;
+      height: 10px;
       padding: 8px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      background-color: #e3f2fd;
+      &:focus {
+        outline: none;
+      }
     }
   }
 
   .buttonChangePasswod {
     margin-top: 16px;
+    width: 46%;
+    display: flex;
+    justify-content: end;
+    position: absolute;
+    top: -15%;
+    right: 4%;
+    background-color: #e3f2fd;
+    padding-right: 3px;
 
     .error-message {
       color: red;
@@ -143,15 +220,15 @@
     }
 
     .change-password-button {
-      background-color: #4caf50;
-      color: white;
-      padding: 10px 20px;
+      background-color: #BB98FF;;
+      color: #3d3d3dd3;
+      padding: 4px 10px;
       border: none;
       border-radius: 4px;
       cursor: pointer;
 
       &:hover {
-        background-color: #45a049;
+        background-color: rgba(138, 43, 226, 0.6);
       }
     }
   }
@@ -163,6 +240,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for transparency */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Adjust the alpha value for transparency */
   z-index: 100;
 }
