--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -38,6 +38,10 @@
   z-index: 1;
 }
 
+// .Background{
+//   background-color: black;
+// }
+
 .background-video.background-cta,
 .background-video,
 .background-video * {
