--- a/Client/src/components/profile/styles.scss
+++ b/Client/src/components/profile/styles.scss
@@ -130,20 +130,28 @@
 
 .managemember {
   border: 2px solid #bb98ff;
-  border-radius: 10px;
+  border-radius: 15px;
   position: relative;
   margin-top: 3%;
   // margin: 10px;
   padding: 5%;
+  height: 30px;
   .head-managemenber{
     max-width: fit-content;
     position: absolute;
     background-color: #e3f2fd;
     top: -20%;
+
     h1{
       padding: 0px 5px 0px 5px;
-
     }
+  }
+  p{
+    
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -185,13 +193,14 @@
     margin-bottom: 16px;
     display: flex;
     align-items: center;
+    position: relative;
 
     label {
       display: block;
     }
 
     input {
-      width: 50%;
+      width: 45%;
       height: 10px;
       padding: 8px;
       border: 1px solid #ccc;
@@ -200,6 +209,17 @@
       &:focus {
         outline: none;
       }
+    }
+    .error{
+      position: absolute;
+      bottom:-35%;
+      right: 50px;
+      
+      p{
+        color: red;
+        font-size: 0.6rem;
+      }
+      
     }
   }
 
@@ -231,6 +251,7 @@
         background-color: rgba(138, 43, 226, 0.6);
       }
     }
+    
   }
 }
 
