--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -45,5 +45,5 @@ body {
     background: transparent;
     text-decoration: none;
     list-style: none;
-    color: #fff;
+    // color: #fff;
   }
