--- a/Client/src/components/note/styles.scss
+++ b/Client/src/components/note/styles.scss
@@ -1,4 +1,3 @@
-
 .custom-dialog {
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -25,6 +24,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     .content {
       width: 80%;
       flex-shrink: 0;
@@ -34,7 +37,7 @@
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       padding: 5px;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns:  2fr 2fr 1fr;;
       gap: 16px;
       .Title {
         display: flex;
@@ -107,29 +110,25 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    img{
-        width: 80%;
-        height:80%;
+    img {
+      width: 80%;
+      height: 80%;
     }
   }
 }
 
-  .Editor{
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate( -50%, -50%);
-  }
+.Editor {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .img-icon-category {
-    max-width: fit-content;
-    background: none;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-  }
-
-
-
-
+.img-icon-category {
+  max-width: fit-content;
+  background: none;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
