--- a/Client/src/components/note/styles.scss
+++ b/Client/src/components/note/styles.scss
@@ -16,6 +16,7 @@
       flex-shrink: 0;
       border-radius: 10px;
       height: fit-content;
+      
     }
   }
   .maincontent {
@@ -29,13 +30,13 @@
       display: none;
     }
     .content {
+      padding: 10px;
       width: 80%;
       flex-shrink: 0;
       border-radius: 10px;
       border: 2px solid #bb98ff;
       background: #e3f2fd;
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      padding: 5px;
       display: grid;
       grid-template-columns:  2fr 2fr 1fr;;
       gap: 16px;
@@ -48,7 +49,7 @@
           color: #3d3d3d;
           text-shadow: 1px 1px 0.6px rgba(0, 0, 0, 0.25);
           font-family: Inter;
-          font-size: 1.2rem;
+          font-size: 1rem;
           font-style: normal;
           font-weight: 500;
           line-height: normal;
@@ -69,7 +70,7 @@
           color: #3d3d3d;
           text-shadow: 1px 1px 0.6px rgba(0, 0, 0, 0.25);
           font-family: Inter;
-          font-size: 1.2rem;
+          font-size: 1rem;
           font-style: normal;
           font-weight: 500;
           line-height: normal;
@@ -89,6 +90,8 @@
           width: 100%;
           height: 100%;
           cursor: pointer;
+        
+          
         }
       }
     }
@@ -132,3 +135,53 @@
   padding: 0;
   cursor: pointer;
 }
+
+
+.quill {
+  border: 1px solid #bb98ff; /* ปรับสีและความหนาตามต้องการ */
+  border-radius: 10px;
+  height: 350px;
+  background: none;
+  overflow: hidden;
+  
+}
+
+/* ปรับขนาดของ .ql-editor ที่มีคลาส .ql-blank */
+.quill .ql-snow .ql-editor.ql-blank {
+
+
+  
+}
+.ql-container.ql-snow {
+  border: none !important; /* !important ใช้เพื่อให้มั่นใจว่าจะมีผลทับทั้งหมด */
+}
+.ql-toolbar.ql-snow {
+
+  top: 10px;
+  border: none !important;
+  border-bottom: 1px solid #bb98ff !important; /* !important ใช้เพื่อให้มั่นใจว่าจะมีผลทับทั้งหมด */
+  
+}
+
+
+.quill {
+  .ql-snow {
+    .ql-editor {
+      overflow: auto; // ใช้ auto เพื่อทำให้ scrollbar ปรากฏเมื่อมีเนื้อหาเกินขนาด
+
+      // ซ่อน scrollbar แต่ยังให้สามารถเลื่อนได้
+      &::-webkit-scrollbar {
+        width: 0.5em; // กำหนดความกว้างของ scrollbar
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: transparent; // ทำให้ thumb ของ scrollbar เป็นสี透ทน
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: transparent; // ทำให้ track ของ scrollbar เป็นสี透ทน
+      }
+    }
+  }
+}
+
