--- a/Client/src/components/note/styles.scss
+++ b/Client/src/components/note/styles.scss
@@ -4,6 +4,8 @@
   width: 400px;
   height: 500px;
   position: absolute;
+  top: -150px;
+  left: 150px;
   .title {
     display: flex;
     justify-content: space-between;
@@ -20,7 +22,7 @@
     }
   }
   .maincontent {
-    height: 90%;
+    height: 85%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -98,15 +100,15 @@
   }
 
   .write {
-    width: 58px;
-    height: 58px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     border: 2px solid #fff;
     box-shadow: -2px -3px 4px 0px rgba(0, 0, 0, 0.25) inset;
     background-color: #bb98ff;
     position: absolute;
-    right: 20px;
-    bottom: 20px;
+    right: 0px;
+    bottom: 0px;
     overflow: hidden;
     padding: 10px;
     display: flex;
@@ -137,6 +139,13 @@
 }
 
 
+//styles editor-----------------------------------------------styles editor
+.contentEditor{
+  position: absolute;
+  top: -300px;
+  left: 600px;
+}
+
 .quill {
   border: 1px solid #bb98ff; /* ปรับสีและความหนาตามต้องการ */
   border-radius: 10px;
@@ -144,10 +153,17 @@
   background: none;
   overflow: hidden;
   
+  
 }
 
 /* ปรับขนาดของ .ql-editor ที่มีคลาส .ql-blank */
 .quill .ql-snow .ql-editor.ql-blank {
+  ol{
+    li{
+      width: 1000%;
+      height: auto;
+    }
+  }
 
 
   
