--- a/Client/src/layout/sideBar/styles.scss
+++ b/Client/src/layout/sideBar/styles.scss
@@ -33,7 +33,7 @@
 
     .menuBar {
         display: none;
-        ul {
+        .S-ul {
             border: 1px solid red;
             width: fit-content;
             border-radius: 20px;
@@ -41,7 +41,7 @@
             background: transparent;
             backdrop-filter: blur(5px);
             margin: 10px 10px;
-            li {
+            .S-li {
                   width: 30px; 
                   margin: 10px;
                 span {
