--- a/Client/src/components/note/styles.scss
+++ b/Client/src/components/note/styles.scss
@@ -142,7 +142,7 @@
 // styles editor-----------------------------------------------styles editor
 .contentEditor{
   position: absolute;
-  top: -300px;
+  // top: -300px;
   left: 600px;
 }
 
