--- a/Client/src/components/atmospheresrtting/styles.scss
+++ b/Client/src/components/atmospheresrtting/styles.scss
@@ -6,9 +6,11 @@
   border-radius: 10px;
   background: rgba(227, 242, 253, 0.9);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-  position: fixed;
-  left: 100px;
+  position: absolute;
+  top: 20%;
+  left: 50%;
   display: none;
+  
   
   .header-atmos {
     width: 340px;
