--- a/Client/src/layout/sideBar/styles.scss
+++ b/Client/src/layout/sideBar/styles.scss
@@ -32,12 +32,12 @@
     }
 
     .menuBar {
-        display: none;
+        display: block;
         .S-ul {
             border: 1px solid red;
             width: fit-content;
-            border-radius: 20px;
-            border: 0.5px solid rgba(255, 255, 255, .2);
+            border-radius: 5px;
+            border: 0.5px solid rgba(255, 255, 255, 0.2);
             background: transparent;
             backdrop-filter: blur(5px);
             margin: 10px 10px;
@@ -52,8 +52,8 @@
             }
         }
     }
-    .display-block {
-        display: block;
+    .displa {
+        display: none;
     }
 }
 
