--- a/Client/src/layout/catagory/catagory.scss
+++ b/Client/src/layout/catagory/catagory.scss
@@ -247,6 +247,11 @@
   .category-modal-container {
     width: 300px;
     height: auto;
+    position: absolute;
+    top: -40%;
+    left: 50%;
+    
+
   }
   .Slider {
     width: 70%;
