--- a/Client/src/components/mini-game/new-game/NewGame.scss
+++ b/Client/src/components/mini-game/new-game/NewGame.scss
@@ -5,7 +5,8 @@
 
   button {
     border: 0 transparent;
-    background-color: var(--correct);
+    background-color: var(--tile);
+    text-shadow: 0px 0px 10px #f0fc47;
     color: white;
     padding: 10px 20px;
     border-radius: 10px;
@@ -13,7 +14,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: var(--tile);
+      background-color: var(--correct);
     }
   }
 }
