--- a/Client/src/components/mini-game/winner/Winner.scss
+++ b/Client/src/components/mini-game/winner/Winner.scss
@@ -12,4 +12,8 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  p{
+    font-size: 3rem;
+    text-shadow: 0px 5px 0px #000000;
+  }
 }
