--- a/Client/src/components/note/styles.scss
+++ b/Client/src/components/note/styles.scss
@@ -18,7 +18,6 @@
       flex-shrink: 0;
       border-radius: 10px;
       height: fit-content;
-      
     }
   }
   .maincontent {
@@ -40,7 +39,7 @@
       background: #e3f2fd;
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       display: grid;
-      grid-template-columns:  2fr 2fr 1fr;;
+      grid-template-columns: 2fr 2fr 1fr;
       gap: 16px;
       .Title {
         display: flex;
@@ -92,8 +91,6 @@
           width: 100%;
           height: 100%;
           cursor: pointer;
-        
-          
         }
       }
     }
@@ -138,49 +135,44 @@
   cursor: pointer;
 }
 
-
 // styles editor-----------------------------------------------styles editor
-.contentEditor{
+.contentEditor {
+  width: 100%;
   position: absolute;
-  // top: -300px;
+  top: -150px;
   left: 600px;
+  background-color: #fff;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+
 }
 
 .quill {
-  border: 1px solid #bb98ff; /* ปรับสีและความหนาตามต้องการ */
+  border: 2px solid #bb98ff; 
   border-radius: 10px;
-  height: 350px;
+  height: 100%;
   background: none;
   overflow: hidden;
-  
-  
 }
 
 /* ปรับขนาดของ .ql-editor ที่มีคลาส .ql-blank */
 .quill .ql-snow .ql-editor.ql-blank {
   color: #000;
-  ol{
-    li{
-      width: 1000%;
+  ol {
+    li {
+      width: 100%;
       height: auto;
-      
     }
   }
-
-
-  
 }
 .ql-container.ql-snow {
   border: none !important; /* !important ใช้เพื่อให้มั่นใจว่าจะมีผลทับทั้งหมด */
 }
 .ql-toolbar.ql-snow {
-
   top: 10px;
   border: none !important;
   border-bottom: 1px solid #bb98ff !important; /* !important ใช้เพื่อให้มั่นใจว่าจะมีผลทับทั้งหมด */
-  
 }
-
 
 .quill {
   .ql-snow {
@@ -203,3 +195,21 @@
     }
   }
 }
+  @media screen and (max-width:1024px) {
+    .custom-dialog {
+      width: 300px;
+      height: 400px;
+      position: absolute;
+      top: -50px;
+      left:50%;
+    }
+    .contentEditor {
+      min-width: 280px;
+      position: absolute;
+      top: -150px;
+      left:50%;
+      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+    
+    }
+  }
