--- a/Client/src/components/Home/Home.scss
+++ b/Client/src/components/Home/Home.scss
@@ -34,28 +34,30 @@
   
 
   .btn-interact {
-    height: 150px;
+    height: 250px;
     width: 250px;
     position: absolute;
-    top: 68%;
+    top: 60%;
     left: 45%;
     z-index: 1;
-    border-radius: 60px;
+    border-radius: 50%;
     border: none;
     opacity: 0;
   }
+
+
 
   .container-text {
     width: 500px;
     height: 350px;
     position: absolute;
-    z-index: 5;
+    z-index: 1;
     top: 10%;
     left: 60%;
     .text-massage {
       width: 100%;
       height: 100%;
-      position: relative;
+      position: absolute;
       opacity: 1;
       transition: opacity 10s ease-in-out; /* ใช้ transition ในกรณีที่คุณต้องการการเปลี่ยนแปลงค่อนข้างช้า */
       animation: fadeInOut 14s forwards infinite; /* เรียกใช้ animation เพื่อทำให้ความทึบของข้อความลดลงเป็น 0 แล้วกลับมาเป็น 1 */
@@ -171,5 +173,14 @@
     overflow-y: hidden;
     object-fit: cover;
     overflow-x: scroll;
+    .btn-interact {
+      position: absolute;
+      top: 60%;
+      left: 125%;
+  
+  
+    
+    }
   }
+
 }
