--- a/Client/src/components/cardtarot/styles.scss
+++ b/Client/src/components/cardtarot/styles.scss
@@ -45,10 +45,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      transform: rotate(0) translate(calc(var(--i) * 30px), 0); /* ปรับตำแหน่งเริ่มต้น */
+      transform: rotate(0) translate(calc(var(--i) * 30px), 0);
       box-shadow: 0px 0px 5px 0px #272727;
       border: 0.5px solid #747373;
-      transition: transform 0.3s ease; /* เพิ่ม transition เพื่อทำให้มีการเคลื่อนไหวนุ่มๆ */
+      transition: transform 0.3s ease;
 
       &:hover {
         box-shadow: 0px 0px 10px 0px rgba(151, 71, 255, 1);
@@ -137,21 +137,36 @@
         height: 100%;
       }
     }
-  }
+    .cardName {
+      font-size: 1.5rem;
+      position: absolute;
+      bottom: 30%;
+      left: 8%;
+      font-weight: 800;
 
-  .bin-summit {
-    position: absolute;
-    bottom: 30px;
-    padding: 10px;
-    width: 200px;
-    border-radius: 5px;
-    font-size: 1rem;
-    background-color: rgba(151, 71, 255, 1);
-    box-shadow: 0px 0px 10px 0px #ffffff;
-    border: none;
-    color: #fff;
-    cursor: pointer;
   }
+}
+.bin-summit {
+  position: absolute;
+  bottom: 30px;
+  padding: 10px;
+  width: 200px;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: rgba(151, 71, 255, 1);
+  box-shadow: 0px 0px 10px 0px #ffffff;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+}
+.textContent {
+  position: absolute;
+  font-size: 1rem;
+  left: 30%;
+  width: 60%;
+  color: #2c2828;
+  top: 30%,
 }
 
 .backdrop {
@@ -162,4 +177,101 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* สีพื้นหลังทึบๆ โปร่งใส */
   z-index: 10; /* ตั้งค่า z-index ให้สูงกว่าทุกองค์ประกอบอื่น เพื่อให้ถูกแสดงทับบนส่วนอื่นๆ ของเว็บ */
+}
+
+@media screen and (max-width: 1024px) {
+  .back-caard {
+    position: fixed;
+    width: 300px;
+    height: 500px;
+    .title {
+      font-size: 1rem;
+      padding: 10px 30px;
+      margin-top: 20px;
+    }
+
+    .contentcard {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      .tarot-card {
+        width: 50px; /* ขนาดของแต่ละ .tarot-card */
+        height: 130px;
+        margin: 5px; /* ระยะห่างระหว่าง .tarot-card */
+        transform: rotate(0) translate(calc(var(--i) * 8px), 0);
+        &:hover {
+          box-shadow: 0px 0px 10px 0px rgba(151, 71, 255, 1);
+          transform: rotate(0) translate(calc(var(--i) * 8px), -20px); /* ปรับค่า translateY ที่ hover */
+        }
+        &.hovered {
+          transform: rotate(0) translate(calc(var(--i) * 8px), -20px);
+          box-shadow: 0px 0px 20px 0px rgba(151, 71, 255, 1);
+        }
+      }
+    }
+  }
+
+  //2
+  .back-caard2 {
+    position: fixed;
+    width: 300px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    .title {
+      padding: 5px 10px 5px 10px;
+      width: fit-content;
+      height: fit-content;
+      border-bottom: 2px solid rgba(151, 71, 255, 1);
+      border-right: 2px solid rgba(151, 71, 255, 1);
+      border-left: 2px solid rgba(151, 71, 255, 1);
+      border-radius: 50px;
+      margin-top: 10px;
+      font-size: 1rem;
+      color: #2c2828;
+    }
+
+    .contentcard {
+      top: 30px;
+      position: relative;
+      width: 100%;
+      height: 80%;
+      display: flex;
+
+      .tarot-card {
+        position: absolute;
+        padding: 2px;
+        left: 15px;
+        width: 70px;
+        height: 100px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .cardName {
+        font-size: 1rem;
+        position: absolute;
+        left: 110px;
+        top: 30px;
+        font-weight: 800;
+      }
+
+    }
+    .textContent {
+      overflow: auto;
+      display: flex;
+      flex-wrap: wrap;
+      position: absolute;
+      font-size: 1rem;
+      text-align: left;
+      left: 0;
+      width: 90%;height: 300px;
+      margin: 20px;
+      color: #2c2828;
+      top: 30%,
+    }
+
+  }
 }
